5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1590_2895.log
== TEST (2019-03-20 15:31:22) 
-- CODE:
var1 = 5
var2 = 100.0
var3 = 40.0
var1 = float(input(5))
var2 = float(input(100))
var3 = float(input(40))

total = 5 * 100 + 40
print(total)
-- OUTPUT:
510040540
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:31:26) 
-- CODE:
var1 = 5
var2 = 100.0
var3 = 40.0
var1 = float(input(5))
var2 = float(input(100))
var3 = float(input(40))

total = 5 * 100 + 40
print(total)
-- OUTPUT:
510040540
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:31:33) 
-- CODE:
var1 = 5
var2 = 100.0
var3 = 40.0
var1 = float(input(5))
var2 = float(input(100))
var3 = float(input(40))

total = (5 * 100) + 40
print(total)
-- OUTPUT:
510040540
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:31:52) 
-- CODE:
var1 = 5
var2 = 100.0
var3 = 40.0
var1 = float(input(5))
var2 = float(input(100))
var3 = float(input(40))

total = var1 * var2 + var3
print(total)
-- OUTPUT:
510040618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:32:26) 
-- CODE:
var1 = 5
var2 = 100.0
var3 = 40.0
var1 = float(input(5))
var2 = float(input(100.0))
var3 = float(input(40.0))

total = var1 * var2 + var3
print(total)
-- OUTPUT:
5100.040.0618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:33:08) 
-- CODE:
var1 = 5
var2 = 100.0
var3 = 40.0
var1 =(input(5))
var2 =(input(100.0))
var3 = float(input(40.0))

total = var1 * var2 + var3
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = var1 * var2 + var3
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:36:31) 
-- CODE:


var3 = float(input(540))

total = 5 * 100.0 + 40.0
print(total)                                                           
-- OUTPUT:
540540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:36:34) 
-- CODE:


var3 = float(input(540))

total = 5 * 100.0 + 40.0
print(total)                                                           
-- EXECUTION TIME:
0.258268
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:07) 
-- CODE:

var1 = float(input("A quantidade de jogos a serem encomendados: ?))
var2 = float(input("O valor unitário de cada jogo: ?"))
var3 = float(input("O valor do frete: ?"))
						 
total = var1 * var2 + var3
print(total)
-- ERROR:
File "XXXX", line 2
    var1 = float(input("A quantidade de jogos a serem encomendados: ?))
                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:43:27) 
-- CODE:

var1 = float(input("A quantidade de jogos a serem encomendados: ?"))
var2 = float(input("O valor unitário de cada jogo: ?"))
var3 = float(input("O valor do frete: ?"))
						 
total = var1 * var2 + var3
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:43:35) 
-- CODE:

var1 = float(input("A quantidade de jogos a serem encomendados: ?"))
var2 = float(input("O valor unitário de cada jogo: ?"))
var3 = float(input("O valor do frete: ?"))
						 
total = var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.221124
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
